2012-08-30  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.02.

2012-08-27  Niibe Yutaka  <gniibe@fsij.org>

	Use WELL random number generator to whiten noise input.
	* src/random.c (NUM_NOISE_INPUTS): Now, it's 6.
	(tmt_init, tmt_one_step, tmt_value): Remove.
	(well512a_step): New function.  WELL random number generator.
	(neug_prng_reseed): Remove.

	* src/main.c (main): Call neug_flash with time interval 2500ms,
	while disconnected.
	Don't call neug_prng_reseed.
	More blinks.

	* src/neug.h (NEUG_PRE_LOOP): It's 64 now (was: 32).

2012-08-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (RANDOM_BYTES_LENGTH): It's now 60 (was: 32).
	(neug_device_reset, neug_ctrl_write_finish)
	(vcom_port_data_setup, neug_setup, neug_get_descriptor)
	(neug_setup_endpoints_for_interface, neug_usb_event)
	(neug_interface, Vector90, EP1_IN_Callback, EP2_IN_Callback)
	(EP3_OUT_Callback): New.
	(main): Now use usb_lld_* functions (was: ChibiOS SDU driver).

	* boards/*/board.c (USB_Cable_Config, set_led): Remove.
	, boards/*/board.h (SET_USB_CONDITION, SET_LED_CONDITION)
	(GPIO_USB, IOPORT_USB, GPIO_LED, IOPORT_LED): Define.

	* boards/common/board-common.c [DFU_SUPPORT] (__early_init): Don't
	set SCB->VTOR here (it's done in reset in src/sys.c).

	* src/halconf.h (HAL_USE_SERIAL_USB, HAL_USE_USB): Not define.
	* src/Makefile.in (CSRC): Add sys.c and usb_lld.c
	* src/sys.h, src/sys.c: New files (from Gnuk).
	* src/usb_lld.h, src/usb_lld.c: New files (from Gnuk).

2011-11-14  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.01.

	* src/Makefile.in (MCFLAGS): Override MCFLAGS option for newer
	GCC of summon-arm-toolchain to add -mfix-cortex-m3-ldrd.
	NOTE: This should not be needed (as -mcpu=cortex-m3 defaults
	to -mfix-cortex-m3-ldrd for GCC-proper), but it is needed
	to select arm-none-eabi/lib/thumb2/libc.a correctly.

	* boards/common/board-common.c (__early_init): Revert change of
	2011-10-05.

	* boards/FST_01/{mcuconf.h,board.h,board.c}: New.
