@@ -1,0 +1,3 @@
+# VID:PID	bcdDev	Product_STRING	Vender_STRING
+234b:0001	0100	NeuG RNG	Free Software Initiative of Japan
+##########<TAB>	##<TAB>	##########<TAB>	#################
